[B]Version 1.9.12[/B]
Added: Grouping recordings by series
Added: Year to the episode title
Fixed: incorrect available disk space calculations

[B]Version 1.9.11[/B]
Updated: Fixed crash when switching channels with enabled timeshifting

[B]Version 1.9.10[/B]
Updated: language files from Transifex

[B]Version 1.9.9[/B]
Updated: change library name to Kodi

[B]Version 1.9.8[/B]
Fixed: deadlock when activating the addon on some darwin (osx, ios) runtimes

[B]Version 1.9.7[/B]
Updated: language files from Transifex

[B]Version 1.9.6[/B]
Updated: language files from Transifex

[B]Version 1.9.5[/B]
Added: display of episode name and number in recordings list
Fixed: no channels/recordings if DVBLink server is not available during xbmc start-up
Fixed: single and recurring manual recordings
Fixed: interrupted playback of the recording, which is still being recorded
Added: Series recording capabilities
Fixed: transcoded live TV streaming
Added: transcoded live TV with timeshifting capabilities

[B]Version 1.9.4[/B]
Updated to API v1.9.2

[B]Version 1.9.2[/B]
Updated: language files from Transifex

[B]Version 1.9.1[/B]
Added: support for DVBLink v5 server timeshifting capabilities
Fixed: series number, genre, episode name tags
Fixed: correct displaying of series recordings

[B]Version 1.9.0[/B]
Sync with XBMC PVR API v1.9.0

[B]Version 1.7.0[/B]
Fixed: Recordings on DVBLINK 4.5.3
Fixed: Closing socket file handles
Added: Support for Android
Changed: No longer show errors on failed to receive recordings / timers list. 

[B]Version 1.6.2[/B]
Fixed: Authentication issue on unix / linux based platforms
Added: Refresh Timers and Recordings list every 30 seconds
Changed: Timeshift buffer path now refers to a folder path
Delete timeshift buffer when nolonger needed

[B]Version 1.6.1[/B]
Added: Timeshift support (Http only)
Added: Information about backend diskspace (System->System Info->PVR Service) 
Added: Option for enabling information notifications (Default:disabled)